--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,10 +1,11 @@
 {
 	"name": "@directus/cli",
-	"version": "9.0.0-rc.59",
+	"version": "9.0.0-rc.61",
 	"description": "The official Directus CLI",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/directus/directus.git"
+		"url": "https://github.com/directus/directus.git",
+		"directory": "packages/cli"
 	},
 	"main": "./dist/index.js",
 	"types": "./dist/types.d.ts",
@@ -46,6 +47,7 @@
 		"csv": "^5.4.0",
 		"debug": "^4.3.1",
 		"dot-object": "^2.1.4",
+		"dotenv": "^8.2.0",
 		"eventemitter2": "^6.4.4",
 		"figlet": "^1.5.0",
 		"format-title": "^1.1.1",
@@ -68,7 +70,6 @@
 		"@types/js-yaml": "^4.0.0",
 		"@types/marked-terminal": "^3.1.1",
 		"@types/yargs": "^15.0.13",
-		"dotenv": "^8.2.0",
 		"jest": "^26.6.3",
 		"nock": "^13.0.10",
 		"npm-run-all": "^4.1.5",
